# 20022025-k2-python

./:  modul_re.md  OOP.md  README.md  comprehensions.md  django.md  funkcje_w_pythonie.md  kolekcje_w_pythonie.md  moduly_i_paczki.md  napisy_w_pythonie.md  requirements.txt  typ_boolowski_czyli_logiczny.md  typy_liczbowe_w_pythonie.md  wybrane_elementy_biblioteki_standardowe.md
projekty/spinoza/: .coveragerc  README.md  api.http  pyproject.toml  xxx.py
projekty/spinoza/src/: .coverage  db.sqlite3  manage.py
projekty/spinoza/src/accounts/: forms.py  urls.py  views.py
projekty/spinoza/src/async_example/: apps.py  urls.py  views.py
projekty/spinoza/src/blog/: admin.py  context_processor.py  forms.py  models.py  urls.py  views.py
projekty/spinoza/src/blog/migrations/: 0001_initial.py  0002_comment.py
projekty/spinoza/src/books/: admin.py  api_urls.py  api_views.py  context_processors.py  fabrics.py  factories.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
projekty/spinoza/src/books/migrations/: 0001_initial.py  0002_book_is_available_book_isbn.py  0003_alter_book_summary_borrowing.py  0004_remove_book_is_available_borrowing_user.py  0005_review.py  0006_review_user.py  0007_alter_genre_slug.py  (+3 more)
projekty/spinoza/src/home/: models.py  urls.py  views.py
projekty/spinoza/src/snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
projekty/spinoza/src/spinoza/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
projekty/spinoza/src/tags/: admin.py  models.py
projekty/spinoza/src/templates/: base.html
(+156 files in other folders)
