[project]
name = "spinoza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "coverage>=7.7.0",
    "crispy-bootstrap5>=2024.10",
    "django>=5.1.7",
    "django-extensions>=3.2.3",
    "factory-boy>=3.3.3",
    "faker>=37.0.1",
    "ipython>=9.0.2",
    "markdown>=3.7",
]
